Fix text logo color on mobile menu

--- a/assets/css/site/header.css
+++ b/assets/css/site/header.css
@@ -38,7 +38,7 @@
     font-weight: 800;
 }
 
-.with-full-cover:not(.menu-opened) .logo-text {
+.with-full-cover .logo-text {
     color: #fff;
 }
 
